# down.nvim

./: '  .gitignore  .gitmodules  .luarc.json  CHANGELOG.md  LICENSE  MARKDOWN_LSP_SUMMARY.md  PLENARY_REMOVAL_SUMMARY.md  README.md  TODO.md  down-scm-1.rockspec  down.lua  init.lua  stylua.toml
.github/workflows/: book.yml  ci.yml  luarocks.yml  release.yml
.poolside/: down-contribute-notion-parity-plan.md  settings.local.yaml
assets/snippets/: README.md
assets/template/: README.md
book/src/: SUMMARY.md  index.md  intro.md
book/src/about/: philosophy.md
book/src/modules/: builtin.md  examples.md  index.md
book/src/tools/: cli.md
data/database/: Projects.md  Tasks.md
doc/: down.txt
docs/: book.toml
docs/src/modules/: builtin.md  examples.md
ext/tree-sitter-down/: Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json
ext/tree-sitter-down/bindings/: node.cc  node.d.ts  node.js
ext/tree-sitter-down/bindings/rust/: build.rs  lib.rs
ext/tree-sitter-down/queries/: highlights.scm  injections.scm
ext/tree-sitter-down/src/: scanner.c
lua/: down.lua  init.lua
lua/down/: add.lua  code.lua  compact.lua  config.lua  global.lua  health.lua  init.lua  mod.lua  skills.lua  test.lua  types.lua
lua/down/event/: autocmd.lua  callback.lua  init.lua
lua/down/log/: init.lua
lua/down/mod/: util.lua
lua/down/types/: config.lua  event.lua  init.lua  log.lua  mod.lua  store.lua
lua/down/util/: init.lua  (+2 more)
plugin/: down.lua
scripts/: doc.lua  minidoc.lua
test/: lsp_markdown_test.lua  markdown_lsp_simple.lua
test/config/: init.lua
(+164 files in other folders)
