[package]
name = "tree-sitter-down"
description = "down grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "down", "markdown", "note-taking"]
categories = ["parser", "text-editors"]
repository = "https://github.com/clpi/down.nvim"
homepage = "https://down.cli.st"
authors = ["Chris Pecunies <clp@clp.is>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
